I styled breed section plus minus on mobile devices and tablet, there is a serious bug witch chart gallery

--- a/src/js/components/Main Components/Breeds/Subcomponents/Information/BaseInformation/_baseInformation.scss
+++ b/src/js/components/Main Components/Breeds/Subcomponents/Information/BaseInformation/_baseInformation.scss
@@ -4,4 +4,18 @@
 .base-information {
   display: flex;
   flex-direction: column;
+  h2 {
+    text-align: center;
+  }
+  .origin {
+    display: flex;
+    justify-content: flex-start;
+    align-items:center;
+    > p {
+      margin-right: 15px;
+    }
+  }
+}
+.bold {
+  font-weight: 700;
 }
