--- a/src/js/components/Main Components/Breeds/_breeds.scss
+++ b/src/js/components/Main Components/Breeds/_breeds.scss
@@ -4,6 +4,7 @@
 @import "Subcomponents/Select/select";
 @import "Subcomponents/Gallery/gallery";
 @import "Subcomponents/Information/BaseInformation/baseInformation";
+@import "Subcomponents/Information/DetailedInformation/detailedInformation";
 @import "Subcomponents/Information/Charts/charts";
 
 .breedsWrapper {
@@ -22,20 +23,22 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 700px;
+  height: 1000px;
   justify-content: space-around;
   align-items: center;
   @include all-big-screens {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    height: 650px;
   }
 }
 .base-information, .detailed-information {
   width: 100%;
-  height: 400px;
+  height: 450px;
   background-color: black;
   color: white;
+  padding: 5px;
   @include all-big-screens {
     width: 45%;
     height: 600px;
